hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: nagihanvural/python-web-app:2
          ports:
            - containerPort: 11130
              protocol: TCP
          resources:
              limits:
                cpu: 500m
              requests:
                cpu: 200m
