hello-world-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-lb
spec:
  type: LoadBalancer
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 11130
    targetPort: 11130
