hello-world-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-world-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 11130
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
spec:
  hosts:
  - "*"
  gateways:
  - hello-world-gw
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: hello-world
        port:
          number: 11130
